--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "dm-prompt": "^0.1.17",
     "inquirer": "^0.9.0",
     "shelljs": "^0.3.0",
-    "suppose": "^0.3.0"
+    "suppose": "^0.3.0",
+    "untildify": "^2.1.0"
   },
   "bin": {
     "dmp": "./bin/dm-path",
