--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "co-prompt": "^1.0.0",
     "colors": "~1.0.3",
     "commander": "^2.6.0",
+    "dm-npm": "^0.1.14",
     "dm-prompt": "^0.1.17",
     "inquirer": "^0.9.0",
     "shelljs": "^0.3.0",
